--- a/index.html
+++ b/index.html
@@ -1,14 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <!-- ✅ Correct Tailwind CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
-<body>
-   
+
+<body class="!overflow-x-hidden">
+    <header>
+        <div
+            class="min-h-[900px] bg-[url(./assets/images/pnd/hero-bg-img.png)] w-full bg-cover bg-center bg-no-repeat relative">
+            <div
+                class="absolute top-0 w-full max-w-[998px] left-1/2 -translate-x-1/2 bg-white h-11 sm:flex hidden justify-center font-inter items-center !leading-[100%] uppercase text-base font-bold text-center rounded-b-[15px]">
+                Do najbliższego szkolenia <span class="text-[#FF4405]">zostały 3 dni!</span> <span
+                    class="text-[#FF4405] !font-medium">👉 Zapisz się teraz!</span>
+            </div>
+            <div class="max-w-[800px] w-full mx-auto sm:pt-[162px]">
+                <ul
+                    class="flex sm:justify-between justify-center max-sm:bg-[#FF4405] max-sm:absolute top-0 -right-full items-center py-5 px-[23px] w-full font-inter max-sm:min-h-screen max-sm:w-full max-sm:flex-col max-sm:gap-y-10">
+                    <li class="text-sm uppercase font-semibold leading-[100%] py-1">
+                        <a href="#gdzieSłuchać">Gdzie słuchać</a>
+                    </li>
+                    <li class="text-sm uppercase font-semibold leading-[100%] py-1">
+                        <a href="#oNas">O nas</a>
+                    </li>
+                    <li class="text-sm uppercase font-semibold leading-[100%] py-1">
+                        <a href="#szkolenia">Szkolenia</a>
+                    </li>
+                    <li class="text-sm uppercase font-semibold leading-[100%] py-1">
+                        <a href="#bezpłatnaKonsultacja">Bezpłatna Konsultacja</a>
+                    </li>
+                    <li class="text-sm uppercase font-semibold leading-[100%] py-1">
+                        <a href="#kontakt">Kontakt</a>
+                    </li>
+                </ul>
+                <div
+                    class="z-50 group !h-[30px] ml-auto !w-[30px] flex flex-col justify-center items-center gap-1 sm:hidden">
+                    <span class="ml-auto h-[2px] bg-white duration-300 w-full"></span>
+                    <span class="ml-auto h-[2px] bg-white duration-300 w-full"></span>
+                    <span class="ml-auto h-[2px] bg-white duration-300 w-full"></span>
+                </div>
+            </div>
+        </div>
+    </header>
     <script src="assets/js/app.js"></script>
 </body>
+
 </html>
