--- a/index.html
+++ b/index.html
@@ -21,29 +21,29 @@
                     class="text-[#FF4405] !font-medium">👉 Zapisz się teraz!</span>
             </div>
             <div class="max-w-[800px] w-full mx-auto sm:pt-[162px]">
-                <ul
-                    class="flex sm:justify-between justify-center max-sm:bg-[#FF4405] max-sm:absolute top-0 -right-full items-center py-5 px-[23px] w-full font-inter max-sm:min-h-screen max-sm:w-full max-sm:flex-col max-sm:gap-y-10">
-                    <li class="text-sm uppercase font-semibold leading-[100%] py-1">
+                <ul id="navMenu"
+                    class="flex sm:justify-between duration-300 justify-center z-40 max-sm:bg-[#803b24] max-sm:fixed top-0 -right-full items-center py-5 px-[23px] w-full font-inter max-sm:min-h-screen max-sm:w-full max-sm:flex-col max-sm:gap-y-10">
+                    <li class="text-sm uppercase font-semibold sm:text-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
                         <a href="#gdzieSłuchać">Gdzie słuchać</a>
                     </li>
-                    <li class="text-sm uppercase font-semibold leading-[100%] py-1">
+                    <li class="text-sm uppercase font-semibold sm:text-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
                         <a href="#oNas">O nas</a>
                     </li>
-                    <li class="text-sm uppercase font-semibold leading-[100%] py-1">
+                    <li class="text-sm uppercase font-semibold sm:text-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
                         <a href="#szkolenia">Szkolenia</a>
                     </li>
-                    <li class="text-sm uppercase font-semibold leading-[100%] py-1">
+                    <li class="text-sm uppercase font-semibold sm:text-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
                         <a href="#bezpłatnaKonsultacja">Bezpłatna Konsultacja</a>
                     </li>
-                    <li class="text-sm uppercase font-semibold leading-[100%] py-1">
+                    <li class="text-sm uppercase font-semibold sm:text-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
                         <a href="#kontakt">Kontakt</a>
                     </li>
                 </ul>
-                <div
-                    class="z-50 group !h-[30px] ml-auto !w-[30px] flex flex-col justify-center items-center gap-1 sm:hidden">
-                    <span class="ml-auto h-[2px] bg-white duration-300 w-full"></span>
-                    <span class="ml-auto h-[2px] bg-white duration-300 w-full"></span>
-                    <span class="ml-auto h-[2px] bg-white duration-300 w-full"></span>
+                <div onclick="toggleNavbar()"
+                    class="z-50 group relative !min-h-[17px] ml-auto pt-[75px] mr-[30px] !w-[25px] flex flex-col justify-center items-center gap-1 sm:hidden">
+                    <span id="toggleBar1" class="origin-left ml-auto h-[3px] bg-white duration-300 w-full"></span>
+                    <span id="toggleBar2" class="origin-left ml-auto h-[3px] bg-white duration-300 w-full"></span>
+                    <span id="toggleBar3" class="origin-left ml-auto h-[3px] bg-white duration-300 w-full"></span>
                 </div>
             </div>
         </div>
