--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
 <body>
     <header>
-        <div
-            class="min-h-[900px] bg-[url(./assets/images/pnd/hero-bg-img.png)] w-full bg-cover bg-center bg-no-repeat relative">
+        <div  class="min-h-[900px] bg-[url(./assets/images/png/hero-bg-img.png)] w-full bg-cover bg-center bg-no-repeat relative">
             <div
                 class="absolute top-0 w-full max-w-[998px] left-1/2 -translate-x-1/2 bg-white h-11 sm:flex hidden justify-center font-inter items-center !leading-[100%] uppercase text-base font-bold text-center rounded-b-[15px]">
                 Do najbliższego szkolenia <span class="text-[#FF4405]">zostały 3 dni!</span> <span
@@ -50,6 +49,9 @@
                     <span id="toggleBar3" class="origin-left ml-auto h-[3px] bg-white duration-300 w-full"></span>
                 </div>
             </nav>
+            <div class="">
+                
+            </div>
         </div>
     </header>
     <script src="./assets/js/app.js"></script>
