--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header class="bg-[url(./assets/images/png/hero-bg-img.png)] w-full bg-cover bg-center bg-no-repeat">
+    <header class="bg-[url(./assets/images/png/hero-bg-img.png)] w-full bg-cover bg-center bg-no-repeat relative">
         <div  class="md:min-h-[900px] min-h-[844px] max-w-[1240px] mx-auto px-[30px] relative">
             <div
                 class="absolute top-0 w-full max-w-[998px] left-1/2 -translate-x-1/2 bg-white h-11 md:flex hidden justify-center font-inter items-center !leading-[100%] uppercase text-base font-bold text-center rounded-b-[15px]">
@@ -55,10 +55,14 @@
                 <img class="md:max-w-[236px] max-w-[250px] w-full" src="./assets/images/svg/logo.svg" alt="logo">
                 <img class="md:max-w-[511px] max-w-[250px] w-full" src="./assets/images/svg/logo-text.svg" alt="text">
             </div>
-            <div class="flex justify-center items-center flex-col pt-[161px]">
-                <button class="font-medium text-2xl leading-[100%] uppercase px-[35px] h-[45px] font-inter rounded-[30px] border-[2px] hover:text-white hover:bg-black duration-300 border-black active:scale-95">Bezpłatna Konsultacja</button>
-                <p class="text-[11px] leading-[100%] uppercase text-center font-medium h-[38px] max-w-[174px] w-full flex justify-center items-center mt-[19px]">Powered by <a href="Protopia.tech">Protopia.tech</a></p>
+            <div
+             class="flex justify-center items-center flex-col md:pt-[161px] pt-[121px]">
+                <button class="font-medium md:text-2xl text-[17px] text-nowrap leading-[100%] uppercase md:px-[35px] px-[25px] md:h-[45px] h-8 font-inter rounded-[30px] md:border-[2px] border-[1.5px] hover:text-white hover:bg-black duration-300 border-black active:scale-95">Bezpłatna Konsultacja</button>
+                <p class="md:text-[11px] text-[9px] leading-[100%] uppercase text-center font-medium md:h-[38px] h-[26px] max-w-[174px] w-full flex justify-center items-center sm:mt-[19px] my-[11px]">Powered by <a href="Protopia.tech">Protopia.tech</a></p>
             </div>
+        </div>
+        <div class="size-20 bg-white rounded-full max-md:hidden absolute right-[47px] bottom-[47px] flex justify-center items-center">
+            <img class="h-[46px] w-[41px]" src="./assets/images/svg/logo.svg" alt="logo">
         </div>
     </header>
     <script src="./assets/js/app.js"></script>
