solve some mistake in footer

--- a/dev.html
+++ b/dev.html
@@ -95,11 +95,11 @@
                         </a>
                     </div>
                     <p
-                        class="font-inter max-sm:text-[10px] leading-[120%] text-white max-w-[118px] sm:max-w-[175px] pt-[34px] sm:pt-[43px]">
+                        class="font-inter max-sm:text-[10px] leading-[120%] text-white max-w-[118px] sm:max-w-[175px] pt-[34.79px] sm:pt-[43px]">
                         © Protopia 2025 Polityka
                         prywatności Regulamin</p>
                 </div>
-                <div class="flex gap-[30px] md:gap-[60px] items-center">
+                <div class="flex gap-[30px] md:gap-[60px] items-center max-sm:mt-[55px]">
                     <div class="flex max-sm:hidden flex-col gap-[25px] items-center">
                         <a href="https://www.youtube.com/" target="_blank">
                             <svg width="30" height="21" viewBox="0 0 30 21" fill="none"
@@ -147,7 +147,7 @@
                 </div>
             </div>
         </div>
-        <img class="max-sm:max-w-[74px] w-full max-w-[146px] max-h-[146px] max-sm:max-h-[74px] absolute top-[110px] sm:top-[161px] max-sm:-right-5 -right-[38px]"
+        <img class="max-sm:max-w-[74px] w-full max-w-[146px] max-h-[146px] max-sm:max-h-[74px] absolute top-[140px] sm:top-[161px] max-sm:-right-5 -right-[38px]"
             src="./assets/images/svg/footer-line-circle.svg" alt="footer-line-circle">
     </footer>
 </body>
