--- a/index.html
+++ b/index.html
@@ -12,34 +12,33 @@
 
 <body>
     <header class="bg-[url(./assets/images/png/hero-bg-img.png)] w-full bg-cover bg-center bg-no-repeat relative">
-        <div  class="md:min-h-[900px] min-h-[844px] max-w-[1240px] mx-auto px-[30px] relative">
+        <div class="md:min-h-[900px] min-h-[844px] max-w-[1240px] mx-auto px-[30px] relative">
             <div
-                class="absolute top-0 w-full max-w-[998px] left-1/2 -translate-x-1/2 bg-white h-11 md:flex hidden justify-center font-inter items-center !leading-[100%] uppercase text-base font-bold text-center rounded-b-[15px]">
+                class="absolute top-0 w-full max-w-[998px] text-light-black left-1/2 -translate-x-1/2 bg-white h-11 md:flex hidden justify-center font-inter items-center !leading-[100%] uppercase text-base font-bold text-center rounded-b-[15px]">
                 Do najbliższego szkolenia <span class="text-[#FF4405]">zostały 3 dni!</span> <span
                     class="text-[#FF4405] !font-medium">👉 Zapisz się teraz!</span>
             </div>
-            <nav
-             class="max-w-[800px] w-full mx-auto md:pt-[162px]">
+            <nav class="max-w-[800px] w-full mx-auto md:pt-[162px]">
                 <ul id="navMenu"
                     class="flex md:justify-between duration-300 justify-center z-40 max-md:bg-[#803b24] max-md:fixed top-0 -right-full items-center py-5 px-[23px] w-full font-inter max-md:min-h-screen max-md:w-full max-md:flex-col max-md:gap-y-10">
                     <li
-                        class="text-sm uppercase font-semibold md:text-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
+                        class="text-sm uppercase font-semibold md:text-light-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
                         <a href="#gdzieSłuchać">Gdzie słuchać</a>
                     </li>
                     <li
-                        class="text-sm uppercase font-semibold md:text-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
+                        class="text-sm uppercase font-semibold md:text-light-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
                         <a href="#oNas">O nas</a>
                     </li>
                     <li
-                        class="text-sm uppercase font-semibold md:text-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
+                        class="text-sm uppercase font-semibold md:text-light-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
                         <a href="#szkolenia">Szkolenia</a>
                     </li>
                     <li
-                        class="text-sm uppercase font-semibold md:text-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
+                        class="text-sm uppercase font-semibold md:text-light-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
                         <a href="#bezpłatnaKonsultacja">Bezpłatna Konsultacja</a>
                     </li>
                     <li
-                        class="text-sm uppercase font-semibold md:text-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
+                        class="text-sm uppercase font-semibold md:text-light-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
                         <a href="#kontakt">Kontakt</a>
                     </li>
                 </ul>
@@ -50,18 +49,22 @@
                     <span id="toggleBar3" class="origin-left ml-auto h-[3px] bg-white duration-300 w-full"></span>
                 </div>
             </nav>
-            <div 
-            class="w-full md:pt-[114px] pt-[133px] flex md:max-w-[800px] md:flex-row flex-col mx-auto px-[30px]  justify-center items-center md:gap-[52px] gap-[27px]">
+            <div
+                class="w-full md:pt-[114px] pt-[133px] flex md:max-w-[800px] md:flex-row flex-col mx-auto px-[30px]  justify-center items-center md:gap-[52px] gap-[27px]">
                 <img class="md:max-w-[236px] max-w-[250px] w-full" src="./assets/images/svg/logo.svg" alt="logo">
                 <img class="md:max-w-[511px] max-w-[250px] w-full" src="./assets/images/svg/logo-text.svg" alt="text">
             </div>
-            <div
-             class="flex justify-center items-center flex-col md:pt-[161px] pt-[121px]">
-                <button class="font-medium md:text-2xl text-[17px] text-nowrap leading-[100%] uppercase md:px-[35px] px-[25px] md:h-[45px] h-8 font-inter rounded-[30px] md:border-[2px] border-[1.5px] hover:text-white hover:bg-black duration-300 border-black active:scale-95">Bezpłatna Konsultacja</button>
-                <p class="md:text-[11px] text-[9px] leading-[100%] uppercase text-center font-medium md:h-[38px] h-[26px] max-w-[174px] w-full flex justify-center items-center sm:mt-[19px] my-[11px]">Powered by <a href="Protopia.tech">Protopia.tech</a></p>
+            <div class="flex justify-center items-center flex-col md:pt-[161px] pt-[121px]">
+                <button
+                    class="font-medium md:text-2xl text-[17px] text-nowrap leading-[100%] uppercase md:px-[35px] px-[25px] md:h-[45px] h-8 font-inter rounded-[30px] md:border-[2px] border-[1.5px] hover:text-white text-light-black hover:bg-light-black duration-300 border-light-black active:scale-95">Bezpłatna
+                    Konsultacja</button>
+                <p
+                    class="font-inter md:text-[11px] text-[9px] leading-[100%] uppercase text-center font-medium md:h-[38px] h-[26px] max-w-[174px] text-light-black w-full flex justify-center items-center sm:mt-[19px] my-[11px]">
+                    Powered by <a href="Protopia.tech">Protopia.tech</a></p>
             </div>
         </div>
-        <div class="size-20 bg-white rounded-full max-md:hidden absolute right-[47px] bottom-[47px] flex justify-center items-center">
+        <div
+            class="size-20 bg-white rounded-full max-md:hidden absolute right-[47px] bottom-[47px] flex justify-center items-center">
             <img class="h-[46px] w-[41px]" src="./assets/images/svg/logo.svg" alt="logo">
         </div>
     </header>
