add hover on footer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pato</title>
+    <link rel="shortcut icon" href="./assets/images/svg/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script type="module" src="./tailwind.js"></script>
@@ -72,7 +73,8 @@
         <div class="max-w-[1240px] mx-auto">
             <div
                 class="flex justify-center py-[48.5px] items-center sm:justify-between max-w-[1220px] max-sm:gap-[37px]">
-                <a href="https://in.linkedin.com/" target="_blank">
+                <a class="hover:scale-110 active:scale-95 transition-all duration-300 ease-linear"
+                    href="https://in.linkedin.com/" target="_blank">
                     <svg class="max-sm:size-[21px]" width="36" height="36" viewBox="0 0 36 36" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -80,7 +82,8 @@
                             fill="white" />
                     </svg>
                 </a>
-                <a href="https://www.facebook.com/?_rdr" target="_blank">
+                <a class="hover:scale-110 active:scale-95 transition-all duration-300 ease-linear"
+                    href="https://www.facebook.com/?_rdr" target="_blank">
                     <svg class="max-sm:size-[21px]" width="36" height="36" viewBox="0 0 36 36" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -88,7 +91,8 @@
                             fill="white" />
                     </svg>
                 </a>
-                <a href="https://x.com/?lang=en" target="_blank">
+                <a class="hover:scale-110 active:scale-95 transition-all duration-300 ease-linear"
+                    href="https://x.com/?lang=en" target="_blank">
                     <svg class="max-sm:max-w-[22px] max-sm:max-h-5" width="38" height="35" viewBox="0 0 39 36"
                         fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -96,7 +100,8 @@
                             fill="white" />
                     </svg>
                 </a>
-                <a href="https://www.instagram.com/accounts/login/?hl=en" target="_blank">
+                <a class="hover:scale-110 active:scale-95 transition-all duration-300 ease-linear"
+                    href="https://www.instagram.com/accounts/login/?hl=en" target="_blank">
                     <svg class="max-sm:size-[20px]" width="35" height="35" viewBox="0 0 35 36" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -104,7 +109,8 @@
                             fill="white" />
                     </svg>
                 </a>
-                <a href="https://discord.com/" target="_blank">
+                <a class="hover:scale-110 active:scale-95 transition-all duration-300 ease-linear"
+                    href="https://discord.com/" target="_blank">
                     <svg class="max-sm:max-w-[26px] max-sm:max-h-[20px]" width="45" height="35" viewBox="0 0 46 36"
                         fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -112,7 +118,8 @@
                             fill="white" />
                     </svg>
                 </a>
-                <a href="https://www.tiktok.com/en/" target="_blank">
+                <a class="hover:scale-110 active:scale-95 transition-all duration-300 ease-linear"
+                    href="https://www.tiktok.com/en/" target="_blank">
                     <svg class="max-sm:max-w-[17px] max-sm:max-h-[20px]" width="30" height="35" viewBox="0 0 31 36"
                         fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -122,11 +129,13 @@
                 </a>
             </div>
             <div class="pt-[28px] sm:pt-[102px] flex justify-between">
-                <div class="">
-                    <a href=""><img class="max-sm:max-w-[98px] max-sm:max-h-[44px]"
+                <div>
+                    <a href="">
+                        <img class="max-sm:max-w-[98px] max-sm:max-h-[44px] pointer-events-none"
                             src="./assets/images/svg/footer-logo.svg" alt="footer-logo"></a>
                     <div class="flex sm:hidden gap-[15px] items-center mt-[62px]">
-                        <a href="https://www.youtube.com/" target="_blank">
+                        <a class="hover:scale-110 active:scale-95 transition-all duration-300 ease-linear"
+                            href="https://www.youtube.com/" target="_blank">
                             <svg class="max-sm:max-w-[28px] max-sm:max-h-[20px]" width="30" height="21"
                                 viewBox="0 0 30 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -134,7 +143,8 @@
                                     fill="#FF4405" />
                             </svg>
                         </a>
-                        <a href="https://open.spotify.com/" target="_blank">
+                        <a class="hover:scale-110 active:scale-95 transition-all duration-300 ease-linear"
+                            href="https://open.spotify.com/" target="_blank">
                             <svg class="max-sm:max-w-[20px] max-sm:max-h-[20px]" width="30" height="31"
                                 viewBox="0 0 30 31" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -142,7 +152,8 @@
                                     fill="#FF4405" />
                             </svg>
                         </a>
-                        <a href="https://podcasts.apple.com/us/browse" target="_blank">
+                        <a class="hover:scale-110 active:scale-95 transition-all duration-300 ease-linear"
+                            href="https://podcasts.apple.com/us/browse" target="_blank">
                             <svg class="max-sm:max-w-[20px] max-sm:max-h-[20px]" width="30" height="30"
                                 viewBox="0 0 30 31" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -158,7 +169,8 @@
                 </div>
                 <div class="flex gap-[30px] md:gap-[60px] items-center max-sm:mt-[55px]">
                     <div class="flex max-sm:hidden flex-col gap-[25px] items-center">
-                        <a href="https://www.youtube.com/" target="_blank">
+                        <a class="hover:scale-110 active:scale-95 transition-all duration-300 ease-linear"
+                            href="https://www.youtube.com/" target="_blank">
                             <svg width="30" height="21" viewBox="0 0 30 21" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -166,7 +178,8 @@
                                     fill="#FF4405" />
                             </svg>
                         </a>
-                        <a href="https://open.spotify.com/" target="_blank">
+                        <a class="hover:scale-110 active:scale-95 transition-all duration-300 ease-linear"
+                            href="https://open.spotify.com/" target="_blank">
                             <svg width="30" height="31" viewBox="0 0 30 31" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -174,7 +187,8 @@
                                     fill="#FF4405" />
                             </svg>
                         </a>
-                        <a href="https://podcasts.apple.com/us/browse" target="_blank">
+                        <a class="hover:scale-110 active:scale-95 transition-all duration-300 ease-linear"
+                            href="https://podcasts.apple.com/us/browse" target="_blank">
                             <svg width="30" height="30" viewBox="0 0 30 31" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -192,7 +206,8 @@
                                     href="">O nas</a>
                             </li>
                             <li><a class="text-white max-sm:text-xs font-inter font-bold leading-[30px] uppercase "
-                                    href="">Szkolenia</a></li>
+                                    href="">Szkolenia</a>'
+                            </li>
                             <li><a class="text-white max-sm:text-xs font-inter font-bold leading-[30px] uppercase "
                                     href="">Bezpłatna
                                     Konsultacja</a></li>
@@ -204,7 +219,7 @@
                 </div>
             </div>
         </div>
-        <img class="max-sm:max-w-[74px] w-full max-w-[146px] max-h-[146px] max-sm:max-h-[74px] absolute top-[140px] sm:top-[161px] max-sm:-right-5 -right-[38px]"
+        <img class="max-sm:max-w-[74px] w-full max-w-[146px] max-h-[146px] pointer-events-none max-sm:max-h-[74px] absolute top-[140px] sm:top-[161px] max-sm:-right-5 -right-[38px]"
             src="./assets/images/svg/footer-line-circle.svg" alt="footer-line-circle">
     </footer>
     <script src="./assets/js/app.js"></script>
