--- a/nas.html
+++ b/nas.html
@@ -9,6 +9,7 @@
     <script type="module" src="./tailwind.js"></script>
 </head>
 <body>
+    <!-------------------NAS SECTION--------------------->
     <section class="bg-orange relative overflow-hidden">
         <div class="max-w-[1240px] mx-auto lg:pt-[105px] md:pt-[140px] pt-[70px] xl:pb-[250px] lg:pb-[120px]">
             <div class="lg:flex max-xl:pl-3 max-md:pr-3">
@@ -68,6 +69,7 @@
         <img src="./assets/images/png/layer-svg.png" alt="decorative layer" class="z-20 absolute bottom-0">
     </section>
 
+    <!-------------------USŁUGI SECTION------------------->
     <section class="pt-16 pb-[139px] bg-light-black">
         <div class="container mx-auto max-w-[1200px] px-4">
            <div class="flex justify-between">
@@ -143,6 +145,30 @@
     
             </div>
         </div>
+    </section>
+
+        <!-------------------PROTOPIA SECTION------------------->
+    <section class="bg-orange relative">
+        <div class="container max-w-[1240px] mx-auto">
+            <div class="flex md:pt-24 pt-14 xl:pb-80 md:pb-64 pb-32 px-[30px] ">
+                <div class="flex flex-col md:flex-row  gap-5">
+                    <img src="./assets/images/png/protopia-img.png" alt="protopia-img" class="md:size-[225px] w-full">
+                    <div class="flex flex-col">
+                        <h1
+                            class="md:text-3xl text-2xl lg:text-4xl pb-[17px] leading-[100%] max-w-[864px] uppercase font-semibold font-inter text-white">
+                            Słuchasz Patoarchitektów dzięki firmie Protopia.
+                        </h1>
+                        <p class="text-xl text-white uppercase leading-[100%]">
+                            Doradzamy, szkolimy i wdrażamy innowacje, które napędzają rozwój firm.
+                        </p>
+                        <button
+                            class="xl:mt-[65px] lg:mt-9 md:mt-[43px] mt-6 md:px-11 px-9 py-[9px] border border-black text-black  rounded-full md:text-2xl text-xl leading-[100%] font-medium w-fit hover:bg-white font-inter transition">
+                            POZNAJ NASZĄ OFERTĘ
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <img src="./assets/images/png/cloud-1.png" alt="cloud-1" class="absolute bottom-0 right-0">
     </section>
     <script src="./assets/js/app.js"></script>
 </body>
