reduce bottom spacing faq

--- a/nas.html
+++ b/nas.html
@@ -70,7 +70,7 @@
     </section>
 
     <!-------------------USŁUGI SECTION------------------->
-    <section class="pt-16 pb-[139px] bg-light-black">
+    <section class="pt-16 md:pb-[139px] pb-14 bg-light-black">
         <div class="container mx-auto max-w-[1200px] px-4">
            <div class="flex justify-between">
             <h2 class="md:text-[64px] text-5xl uppercase text-white xl:pb-[176px] lg:pb-32 md:pb-[76px] pb-14 font-medium font-tomorrow">Usługi</h2>
