add left right padding

--- a/nas.html
+++ b/nas.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <!-------------------NAS SECTION--------------------->
-    <section class="bg-orange relative overflow-hidden">
+    <section class="bg-orange relative overflow-hidden max-w-[1920px] mx-auto">
         <div class="max-w-[1240px] mx-auto lg:pt-[105px] md:pt-[140px] pt-[70px] xl:pb-[250px] lg:pb-[120px]">
-            <div class="lg:flex max-xl:pl-3 max-md:pr-3">
+            <div class="lg:flex px-[30px]">
                 <div class="lg:max-w-md">
                     <h2 class="font-semibold text-[64px] text-light-black font-tomorrow leading-[100%] uppercase">
                         O nas
@@ -70,8 +70,8 @@
     </section>
 
     <!-------------------USŁUGI SECTION------------------->
-    <section class="pt-16 md:pb-[139px] pb-14 bg-light-black">
-        <div class="container mx-auto max-w-[1200px] px-4">
+    <section class="pt-16 md:pb-[139px] pb-14 bg-light-black max-w-[1920px] mx-auto">
+        <div class="container mx-auto max-w-[1240px] px-[30px]">
            <div class="flex justify-between">
             <h2 class="md:text-[64px] text-5xl uppercase text-white xl:pb-[176px] lg:pb-32 md:pb-[76px] pb-14 font-medium font-tomorrow">Usługi</h2>
             <img src="./assets/images/svg/faq-arrow.svg" alt="faq-arrow" class="lg:pb-[93px] pb-[40px]  max-lg:size-28 max-md:size-20">
@@ -148,7 +148,7 @@
     </section>
 
         <!-------------------PROTOPIA SECTION------------------->
-    <section class="bg-orange relative">
+    <section class="bg-orange relative max-w-[1920px] mx-auto">
         <div class="container max-w-[1240px] mx-auto">
             <div class="flex md:pt-24 pt-14 xl:pb-80 md:pb-64 pb-32 px-[30px] ">
                 <div class="flex flex-col md:flex-row  gap-5">
