patoarchitekciPodcast static  complete

--- a/index.html
+++ b/index.html
@@ -69,6 +69,22 @@
             <img class="h-[46px] w-[41px]" src="./assets/images/svg/logo.svg" alt="logo">
         </div>
     </header>
+    <section id="patoarchitekciPodcast" class="min-h-[941px] bg-yellow relative">
+        <div
+            class="max-w-[1261px] w-full mx-auto px-[30px] pt-[74px]">
+            <img class="ml-auto pb-[56px]" src="./assets/images/svg/rounded-cross.svg" alt="">
+            <div class="uppercase text-[48px] font-tomorrow min-h-[325px]">
+                <h3 class="font-semibold text-black -mt-3 leading-[123%]">Patoarchitekci to podcast,</h3>
+                <p class="font-medium text-light-black leading-[120%] -mb-5">
+                    który rozkłada IT na czynniki pierwsze, bez zbędnego żargonu i BS. Prowadzą go Łukasz Kałużny i Szymon Warda
+                    – eksperci,
+                    którzy z humorem i szczerością biorą na warsztat najtrudniejsze tematy technologiczne.
+                </p>
+            </div>
+            <img class="pt-[66px]" src="./assets/images/svg/cross.svg" alt="">
+        </div>
+        <img class="absolute bottom-0 right-0 w-full" src="./assets/images/png/cloud-white.png" alt="white cloud">
+    </section>
     <footer class="bg-light-black px-[30px] sm:px-5 lg:px-[110px] relative pb-[35px] sm:pb-[65px]">
         <div class="max-w-[1240px] mx-auto">
             <div
